package com.directi.training.dip.exercise_refractored;

public interface IDatabase {
    void write(String data);
}
